err/kombilo.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/Pmw'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/bin'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/contrib'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/demos'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/doc'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/lib'...
Listing './lib/python3.5/site-packages/Pmw/Pmw_2_0_1/tests'...
Listing './lib/python3.5/site-packages/Pmw-2.0.1.egg-info'...
Listing './lib/python3.5/site-packages/configobj-5.0.6.egg-info'...
Listing './lib/python3.5/site-packages/kombilo'...
Listing './lib/python3.5/site-packages/kombilo/data'...
Listing './lib/python3.5/site-packages/kombilo/icons'...
Listing './lib/python3.5/site-packages/kombilo/lang'...
Listing './lib/python3.5/site-packages/kombilo/lang/cs'...
Listing './lib/python3.5/site-packages/kombilo/lang/cs/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/kombilo/lang/de'...
Listing './lib/python3.5/site-packages/kombilo/lang/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/kombilo/lang/en'...
Listing './lib/python3.5/site-packages/kombilo/lang/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/kombilo/lang/eo'...
Listing './lib/python3.5/site-packages/kombilo/lang/eo/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/kombilo/libkombilo'...
Listing './lib/python3.5/site-packages/kombilo/tests'...
Listing './lib/python3.5/site-packages/kombilo/tests/db'...
Listing './lib/python3.5/site-packages/kombilo/tests/sgfs'...
Compiling './lib/python3.5/site-packages/kombilo/tests/test_sigsearch.py'...
***   File "./lib/python3.5/site-packages/kombilo/tests/test_sigsearch.py", line 67
    print os.path.join(os.path.dirname(__file__), 'db')
           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kombilo/tooltip'...
Listing './lib/python3.5/site-packages/kombilo/vsl'...
Listing './lib/python3.5/site-packages/kombilo-0.8.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
